ScriptExecutionContext: Use FINAL instead of foo() { virtualFoo() } <https://webkit.org/b/120827>

Reviewed by Darin Adler.

Now that we have FINAL, we can just use that to have fast versions of url()
and completeURL() when calling through a Document or WorkerGlobalScope pointer.

* dom/Document.cpp:
* dom/Document.h:
* dom/ScriptExecutionContext.h:
* workers/WorkerGlobalScope.cpp:
* workers/WorkerGlobalScope.h:


Canonical link: https://commits.webkit.org/138902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155304 268f45cc-cd09-0410-ab3c-d52691b4dbfc